# wattstor

./: README.md  docker-compose.yaml  pyproject.toml
alembic/versions/: 88388953c469_auth.py  aaa2532a66b2_facilities.py
app/: Dockerfile  pyproject.toml
app/application/: facility.py
app/infrastructure/: auth.py  facility.py
app/model/: auth.py  exceptions.py  facility.py  json.py
app/presentation/: facility.py
app/templates/: base.html  device_detail.html  site_detail.html  site_list.html
app/tests/: test_auth.py
proxy/: Dockerfile  conf
