[tool.poetry]
name = "wattstore"
version = "0.1.0"
description = ""
authors = ["Mario Wanka <wanka.mario@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
orjson = "^3.10.18"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
