[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Mario Wanka <wanka.mario@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.1"
cattrs = "^25.1.1"
python-dateutil = "^2.9.0.post0"
attrs = "^25.3.0"
sqlalchemy = "^2.0.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
